--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,400&family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <script src="https://cdn.usefathom.com/script.js" data-site="RQQNOATA" defer></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
